fixes uncentered button text on mobile

--- a/frontend/src/pages/Landing/LandingPage.module.scss
+++ b/frontend/src/pages/Landing/LandingPage.module.scss
@@ -16,6 +16,7 @@
   font-weight: 500 !important;
   font-family: "DM Sans", sans-serif !important;
   padding: 16px 30px !important;
+  text-align: center;
 }
 
 .NoUnderline {
